k8s/spark-java-helm/templates/deploy.yaml
kind: apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  sparkjava
  labels:
    name:  sparkjava
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  sparkjava
    spec:
      containers:
      - image:  861531569385.dkr.ecr.us-east-2.amazonaws.com/sparkjava:number
        name:  sparkjava
        resources:
          requests:
            cpu: "1"
            memory: "2Gb"
          limits: 
            cpu: '2'
            memory: '3Gb'
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 10      
        ports:
        - containerPort:  8080
          name:  sparkjava
      restartPolicy: Always
      imagePullPolicy: Always
